docs/api/qiskit/0.24/qiskit.circuit.library.U2Gate.mdx
---
title: U2Gate
description: API reference for qiskit.circuit.library.U2Gate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.U2Gate
---

<span id="qiskit-circuit-library-u2gate" />

# qiskit.circuit.library.U2Gate

<Class id="qiskit.circuit.library.U2Gate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/library/standard_gates/u2.py" signature="U2Gate(phi, lam, label=None)" modifiers="class">
  Single-qubit rotation about the X+Z axis.

  Implemented using one X90 pulse on IBM Quantum systems:

$$
U2(\phi, \lambda) = RZ(\phi).RY(\frac{\pi}{2}).RZ(\lambda)
$$

  **Circuit symbol:**

  ```python
       ┌─────────┐
  q_0: ┤ U2(φ,λ) ├
       └─────────┘
  ```

  **Matrix Representation:**

$$
\begin{split}U2(\phi, \lambda) = \frac{1}{\sqrt{2}}
\begin{pmatrix}
1          & -e^{i\lambda} \\
e^{i\phi} & e^{i(\phi+\lambda)}
\end{pmatrix}\end{split}
$$

  **Examples:**

$$
U2(0, \pi) = H
U2(0, 0) = RY(\pi/2)
U2(-\pi/2, \pi/2) = RX(\pi/2)
$$

  <Admonition title="See also" type="note">
    `U3Gate`: U3 is a generalization of U2 that covers all single-qubit rotations, using two X90 pulses.
  </Admonition>

  Create new U2 gate.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.library.U2Gate.__init__" signature="__init__(phi, lam, label=None)">
    Create new U2 gate.
  </Function>

  ## Methods

  |                                                                                                                                               |                                                                          |
  | --------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.library.U2Gate.__init__ "qiskit.circuit.library.U2Gate.__init__")(phi, lam\[, label])                            | Create new U2 gate.                                                      |
  | [`add_decomposition`](#qiskit.circuit.library.U2Gate.add_decomposition "qiskit.circuit.library.U2Gate.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.library.U2Gate.assemble "qiskit.circuit.library.U2Gate.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.library.U2Gate.broadcast_arguments "qiskit.circuit.library.U2Gate.broadcast_arguments")(qargs, cargs) | Validation and handling of the arguments and its relationship.           |
  | [`c_if`](#qiskit.circuit.library.U2Gate.c_if "qiskit.circuit.library.U2Gate.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`control`](#qiskit.circuit.library.U2Gate.control "qiskit.circuit.library.U2Gate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])         | Return controlled version of gate.                                       |
  | [`copy`](#qiskit.circuit.library.U2Gate.copy "qiskit.circuit.library.U2Gate.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.library.U2Gate.inverse "qiskit.circuit.library.U2Gate.inverse")()                                                 | Return inverted U2 gate.                                                 |
  | [`is_parameterized`](#qiskit.circuit.library.U2Gate.is_parameterized "qiskit.circuit.library.U2Gate.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.library.U2Gate.mirror "qiskit.circuit.library.U2Gate.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`power`](#qiskit.circuit.library.U2Gate.power "qiskit.circuit.library.U2Gate.power")(exponent)                                               | Creates a unitary gate as gate^exponent.                                 |
  | [`qasm`](#qiskit.circuit.library.U2Gate.qasm "qiskit.circuit.library.U2Gate.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.library.U2Gate.repeat "qiskit.circuit.library.U2Gate.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.library.U2Gate.reverse_ops "qiskit.circuit.library.U2Gate.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`to_matrix`](#qiskit.circuit.library.U2Gate.to_matrix "qiskit.circuit.library.U2Gate.to_matrix")()                                           | Return a Numpy.array for the U2 gate.                                    |
  | [`validate_parameter`](#qiskit.circuit.library.U2Gate.validate_parameter "qiskit.circuit.library.U2Gate.validate_parameter")(parameter)       | Gate parameters should be int, float, or ParameterExpression             |

  ## Attributes

  |                                                                                                                  |                                                                               |
  | ---------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.circuit.library.U2Gate.decompositions "qiskit.circuit.library.U2Gate.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.library.U2Gate.definition "qiskit.circuit.library.U2Gate.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.library.U2Gate.duration "qiskit.circuit.library.U2Gate.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.circuit.library.U2Gate.label "qiskit.circuit.library.U2Gate.label")                            | Return gate label                                                             |
  | [`params`](#qiskit.circuit.library.U2Gate.params "qiskit.circuit.library.U2Gate.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.circuit.library.U2Gate.unit "qiskit.circuit.library.U2Gate.unit")                               | Get the time unit of duration.                                                |

  ## Members list

  ### add\_decomposition

  <Function id="qiskit.circuit.library.U2Gate.add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.library.U2Gate.assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.U2Gate.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.library.U2Gate.c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### control

  <Function id="qiskit.circuit.library.U2Gate.control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.U2Gate.copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Attribute id="qiskit.circuit.library.U2Gate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.U2Gate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.U2Gate.duration">
    Get the duration.
  </Attribute>

  ### inverse

  <Function id="qiskit.circuit.library.U2Gate.inverse" signature="inverse()">
    Return inverted U2 gate.

    $U2(\phi, \lambda)^{\dagger} =U2(-\lambda-\pi, -\phi+\pi)$)
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.U2Gate.is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Attribute id="qiskit.circuit.library.U2Gate.label">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  ### mirror

  <Function id="qiskit.circuit.library.U2Gate.mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Attribute id="qiskit.circuit.library.U2Gate.params">
    return instruction params.
  </Attribute>

  ### power

  <Function id="qiskit.circuit.library.U2Gate.power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.circuit.library.U2Gate.qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.U2Gate.repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.U2Gate.reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.U2Gate.to_matrix" signature="to_matrix()">
    Return a Numpy.array for the U2 gate.
  </Function>

  ### unit

  <Attribute id="qiskit.circuit.library.U2Gate.unit">
    Get the time unit of duration.
  </Attribute>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.U2Gate.validate_parameter" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

